# ipam-rs

./: .dockerignore  .env-example  .gitignore  Cargo.toml  Dockerfile  Dockerfile-backend  docker-compose.yml  initdb.sql  prueba.txt
macros/: Cargo.toml
macros/src/: lib.rs
src/: api_v1.rs  app_state.rs  config.rs  lib.rs  main.rs  response.rs  trace_layer.rs
src/api_v1/: mod.rs
src/api_v1/handlers/: addresses.rs  auth.rs  error.rs  extractors.rs  mod.rs  network.rs  node.rs  vlan.rs
src/api_v1/handlers/entries/: mod.rs  params.rs
src/database/: entities.rs  mappers.rs  mod.rs  repository.rs  sql.rs  transaction.rs
src/database/transaction/: mod.rs
src/handler/: addresses.rs  auth.rs  device.rs  error.rs  extractors.rs  location.rs  mod.rs  models_data_entry.rs  mount_point.rs  network.rs  node.rs  office.rs  params.rs  room.rs  vlan.rs
src/handler/entries/: mod.rs  models.rs  params.rs
src/models/: device.rs  location.rs  mod.rs  mound_point.rs  network.rs  node.rs  office.rs  room.rs  user.rs  utils.rs  vlan.rs
src/models/network/: addresses.rs  mod.rs
src/response/: mod.rs
src/services/: mod.rs  network.rs
src/user/: mod.rs
utils/: Cargo.toml
utils/src/: lib.rs  response_error.rs
utils/src/services/: authentication.rs  ipam.rs  mod.rs
utils/src/types/: host_count.rs  mod.rs  port.rs  vlan.rs
