[package]
name = "ipam_backend"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["json", "macros"] }
cookie = "0.18.1"
dotenv = "0.15.0"
futures = "0.3.31"
ipnet = { version = "2.10.1", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "time", "uuid"] }
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["compression-br", "compression-deflate", "compression-gzip", "compression-zstd", "cors", "trace", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
macros = { path = "./macros"}
libipam = { path = "./utils", package = "utils_ipam", features = ["full"] }

[[bin]]
name = "ipam"
path = "src/main.rs"
