[package]
name = "utils_ipam"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.8.1", optional = true}
bcrypt = { version = "0.16.0", optional = true }
futures = "0.3.31"
ipnet = { version = "2.11.0", optional = true}
jsonwebtoken = {version = "9.3.0", optional = true }
serde = "1.0.217"
serde_json = {version = "1.0.137", optional = true}
sqlx = { version = "0.8.3", optional = true }
time = { version = "0.3.37", features = ["serde"], optional = true }
tokio = { version = "1.43.0", features = ["full"], optional = true }

[features]
types = ["ipnet"]
auth = ["bcrypt", "jsonwebtoken"]
ipam_services = ["axum", "tokio"]
sqlx_type = ["types", "sqlx"]
token = ["axum"]
error = ["time", "axum", "serde_json"]
full = ["types", "error", "auth", "ipam_services", "sqlx_type", "token"]