[package]
name = "utils_ipam"
version = "1.0.0"
edition = "2024"


[dependencies]
axum = { version = "0.8.1"}
bcrypt = { version = "0.16.0"}
futures = "0.3.31"
ipnet = { version = "2.11.0"}
jsonwebtoken = {version = "9.3.0"}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = {version = "1.0.137"}
sqlx = { version = "0.8.3"}
time = { version = "0.3.37", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full"] }